# fantasy-football-budget-optimizer

./: LICENSE  README.md  README_optimizer.txt  auction_superflex_optimizer_2025.ipynb  fp_fetch_rankings.py  main.py  pyproject.toml
data/: fp_rankings_08142025.csv  fpros_auction.csv  template_kdst.csv  template_players.csv  yahoo_adp.csv
outputs/: roster_Base_20250821_223714.csv  roster_Base_20250821_223757.csv
