[project]
name = "fantasy-football-budget-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.30.1",
    "lxml>=6.0.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "pulp>=3.2.2",
    "requests>=2.32.4",
]
